--- a/checkout.html
+++ b/checkout.html
@@ -61,7 +61,7 @@
                         <img src="./assets/icon/page-path-arrow.svg" alt=" " />
                     </div>
                     <div class="page-path__item page-path__item--onsite">
-                        Checkout
+                        <a href="./checkout.html">Checkout</a>
                         <img src="./assets/icon/page-path-arrow.svg" alt=" " />
                     </div>
                 </div>
