--- a/payment-method.html
+++ b/payment-method.html
@@ -61,15 +61,15 @@
                         <img src="./assets/icon/page-path-arrow.svg" alt=" " />
                     </div>
                     <div class="page-path__item">
-                        Checkout
+                        <a href="./checkout.html">Checkout</a>
                         <img src="./assets/icon/page-path-arrow.svg" alt=" " />
                     </div>
-                    <div class="page-path__item">
-                        Shipping
+                    <div class="page-path__item page-path__item">
+                        <a href="./shipping.html">Shipping</a>
                         <img src="./assets/icon/page-path-arrow.svg" alt=" " />
                     </div>
                     <div class="page-path__item page-path__item--onsite">
-                        Payment Method
+                        <a href="./payment-method.html">Payment Method</a>
                         <img src="./assets/icon/page-path-arrow.svg" alt=" " />
                     </div>
                 </div>
@@ -289,7 +289,7 @@
                             </button>
                             <hr />
                             <a
-                                href="./checkout.html"
+                                href="./shipping.html"
                                 class="check-out__back"
                                 style="align-self: self-start"
                             >
