--- a/production.html
+++ b/production.html
@@ -271,7 +271,7 @@
         <div class="production-page-wrap">
             <div class="container">
                 <div class="production__tabs">
-                    <button class="production__tab">Description</button>
+                    <button class="production__tab ">Description</button>
                     <button class="production__tab">Features</button>
                     <button class="production__tab active">
                         Review (1100)
@@ -283,93 +283,113 @@
 
         <div class="production-page-wrap">
             <div class="container">
-                <div class="review">
-                    <p class="review__title">What our customers are saying</p>
-                    <div
-                        class="row row-cols-3 row-cols-lg-2 gy-lg-3 row-cols-md-1"
-                    >
-                        <div class="col">
-                            <div class="review__item">
-                                <div class="review__content">
-                                    <img
-                                        src="./assets/img/review/pic-1.jpg"
-                                        alt=" "
-                                        class="review__avatar"
-                                    />
-                                    <cite class="review__author"
-                                        >Jakir Hussen</cite
-                                    >
-                                    <blockquote class="review__quote">
-                                        Great product, I love this Coffee Beans
-                                    </blockquote>
-                                </div>
-                                <div class="review__rate">
-                                    <img
-                                        src="./assets/icon/yellow-stars.svg"
-                                        alt=" "
-                                        class="review__rate-star"
-                                    />
-                                    <span class="review__rate-label"
-                                        >(3.5) Review</span
-                                    >
+                <div class="production__tab-contents">
+                    
+                        <div class="production__tab-content">
+                            <div class="description">description</div>
+                        </div>
+                        <div class="production__tab-content">
+                            <div class="feature">feature</div>
+                        </div>
+                        <div class="production__tab-content active">
+                            <div class="review">
+                                <p class="review__title">
+                                    What our customers are saying
+                                </p>
+                                <div
+                                    class="row row-cols-3 row-cols-lg-2 gy-lg-3 row-cols-md-1"
+                                >
+                                    <div class="col">
+                                        <div class="review__item">
+                                            <div class="review__content">
+                                                <img
+                                                    src="./assets/img/review/pic-1.jpg"
+                                                    alt=" "
+                                                    class="review__avatar"
+                                                />
+                                                <cite class="review__author"
+                                                    >Jakir Hussen</cite
+                                                >
+                                                <blockquote class="review__quote">
+                                                    Great product, I love this
+                                                    Coffee Beans
+                                                </blockquote>
+                                            </div>
+                                            <div class="review__rate">
+                                                <img
+                                                    src="./assets/icon/yellow-stars.svg"
+                                                    alt=" "
+                                                    class="review__rate-star"
+                                                />
+                                                <span class="review__rate-label"
+                                                    >(3.5) Review</span
+                                                >
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col">
+                                        <div class="review__item">
+                                            <div class="review__content">
+                                                <img
+                                                    src="./assets/img/review/pic-2.jpg"
+                                                    alt=" "
+                                                    class="review__avatar"
+                                                />
+                                                <cite class="review__author"
+                                                    >Jubed Ahmed</cite
+                                                >
+                                                <blockquote class="review__quote">
+                                                    Awesome Coffee, I love this
+                                                    Coffee Beans
+                                                </blockquote>
+                                            </div>
+                                            <div class="review__rate">
+                                                <img
+                                                    src="./assets/icon/yellow-stars.svg"
+                                                    alt=" "
+                                                    class="review__rate-star"
+                                                />
+                                                <span class="review__rate-label"
+                                                    >(3.5) Review</span
+                                                >
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col">
+                                        <div class="review__item">
+                                            <div class="review__content">
+                                                <img
+                                                    src="./assets/img/review/pic-3.jpg"
+                                                    alt=" "
+                                                    class="review__avatar"
+                                                />
+                                                <cite class="review__author"
+                                                    >Delwar Hussain
+                                                </cite>
+                                                <blockquote class="review__quote">
+                                                    Great product, I like this
+                                                    Coffee Beans
+                                                </blockquote>
+                                            </div>
+                                            <div class="review__rate">
+                                                <img
+                                                    src="./assets/icon/yellow-stars.svg"
+                                                    alt=" "
+                                                    class="review__rate-star"
+                                                />
+                                                <span class="review__rate-label"
+                                                    >(3.5) Review</span
+                                                >
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col">
-                            <div class="review__item">
-                                <div class="review__content">
-                                    <img
-                                        src="./assets/img/review/pic-2.jpg"
-                                        alt=" "
-                                        class="review__avatar"
-                                    />
-                                    <cite class="review__author"
-                                        >Jubed Ahmed</cite
-                                    >
-                                    <blockquote class="review__quote">
-                                        Awesome Coffee, I love this Coffee Beans
-                                    </blockquote>
-                                </div>
-                                <div class="review__rate">
-                                    <img
-                                        src="./assets/icon/yellow-stars.svg"
-                                        alt=" "
-                                        class="review__rate-star"
-                                    />
-                                    <span class="review__rate-label"
-                                        >(3.5) Review</span
-                                    >
-                                </div>
-                            </div>
+                        <div class="production__tab-content ">
+                            <div class="similar">similar</div>
                         </div>
-                        <div class="col">
-                            <div class="review__item">
-                                <div class="review__content">
-                                    <img
-                                        src="./assets/img/review/pic-3.jpg"
-                                        alt=" "
-                                        class="review__avatar"
-                                    />
-                                    <cite class="review__author"
-                                        >Delwar Hussain
-                                    </cite>
-                                    <blockquote class="review__quote">
-                                        Great product, I like this Coffee Beans
-                                    </blockquote>
-                                </div>
-                                <div class="review__rate">
-                                    <img
-                                        src="./assets/icon/yellow-stars.svg"
-                                        alt=" "
-                                        class="review__rate-star"
-                                    />
-                                    <span class="review__rate-label"
-                                        >(3.5) Review</span
-                                    >
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    
                 </div>
             </div>
         </div>
