--- a/shipping.html
+++ b/shipping.html
@@ -60,11 +60,11 @@
                         <img src="./assets/icon/page-path-arrow.svg" alt=" " />
                     </div>
                     <div class="page-path__item">
-                        Checkout
+                        <a href="./checkout.html">Checkout</a>
                         <img src="./assets/icon/page-path-arrow.svg" alt=" " />
                     </div>
                     <div class="page-path__item page-path__item--onsite">
-                        Shipping
+                        <a href="./shipping.html">Shipping</a>
                         <img src="./assets/icon/page-path-arrow.svg" alt=" " />
                     </div>
                 </div>
