--- a/sign-in.html
+++ b/sign-in.html
@@ -127,7 +127,7 @@
                                         >Set as default card</span
                                     >
                                 </div>
-                                <a href="#!" class="sign__link">
+                                <a href="./recover-password.html" class="sign__link">
                                     Recovery Password
                                 </a>
                             </div>
