--- a/sign-up.html
+++ b/sign-up.html
@@ -129,7 +129,10 @@
                                         >Set as default card</span
                                     >
                                 </div>
-                                <a href="#!" class="sign__link">
+                                <a
+                                    href="./recover-password.html"
+                                    class="sign__link"
+                                >
                                     Recovery Password
                                 </a>
                             </div>
