--- a/sign-in.html
+++ b/sign-in.html
@@ -109,6 +109,7 @@
                                 <input
                                     type="password"
                                     placeholder="Password"
+                                    minlength="6"
                                     required
                                 />
                                 <img
@@ -127,7 +128,10 @@
                                         >Set as default card</span
                                     >
                                 </div>
-                                <a href="./recover-password.html" class="sign__link">
+                                <a
+                                    href="./recover-password.html"
+                                    class="sign__link"
+                                >
                                     Recovery Password
                                 </a>
                             </div>
