--- a/sign-up.html
+++ b/sign-up.html
@@ -101,7 +101,7 @@
                                 />
                             </div>
                             <div class="sign__input-line">
-                                <input type="password" placeholder="Password" />
+                                <input type="password" placeholder="Password" minlength="6" />
                                 <img
                                     src="./assets/icon/lock.svg"
                                     alt="password"
@@ -112,6 +112,7 @@
                                 <input
                                     type="password"
                                     placeholder="Confirm Password"
+                                    minlength="6"
                                     required
                                 />
                                 <img
